# papers-helper

./: .gitattributes  .gitignore  DESIGN.md  README.md  dev.sh  test.sh
.github/workflows/: backend.yml  frontend.yml
backend/: pyproject.toml
backend/app/: chroma.py  config.py  embeddings.py  ingestion.py  llm_service.py  main.py  ollama_service.py  settings.py
backend/app/graph/: __init__.py  build.py  builder.py  communities.py  concepts.py  queries.py  schema.py  semantic.py  storage.py
backend/app/parsers/: __init__.py  _base.py  _bibtex.py  _docx.py  _epub.py  _html.py  _odt.py  _pdf.py  _rtf.py  _txt.py
backend/app/routes/: categorize.py  chat.py  conversations.py  papers.py  projects.py  settings.py
backend/app/routes/chat/: __init__.py  condense.py  condense_routes.py  context.py  routes.py
backend/app/routes/graph/: __init__.py  routes.py
backend/tests/: conftest.py  test_categories.py  test_categorize.py  test_chat.py  test_chat_context.py  test_chroma.py  test_condense.py  test_conversations.py  test_embeddings.py  test_graph_build.py  test_graph_communities.py  test_graph_concepts.py  test_graph_integration.py  test_graph_routes.py  test_graph_schema.py  test_graph_semantic.py  test_graph_storage.py  test_health.py  test_ingestion_queue.py  test_parsers.py  test_reindex.py  test_settings.py  test_sidecar_cleanup.py  test_text_processing.py  test_unindexed_import.py
frontend/: .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.module.scss  App.tsx  index.scss  utils.ts
frontend/src/api/: categorize.ts  chat.ts  condense.ts  conversations.ts  graph.ts  health.ts  llm.ts  models.ts  papers.ts  problematique.ts  projects.ts  settings.ts
frontend/src/components/: ApiKeyModal.tsx  (+45 more)
(+99 files in other folders)
